Updated project-section gap -- resolved overlap issue

--- a/default.css
+++ b/default.css
@@ -897,7 +897,7 @@ img{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: 40px;
     }
 
     .portfolio_tech_container {
@@ -1022,7 +1022,7 @@ img{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 20px;
+        gap: 40px;
     }
 
     .portfolio_tech_container {
